--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>vaadin-crud-flow-root</artifactId>
-    <version>3.0-SNAPSHOT</version>
+    <version>mvn install -Pdirectory</version>
     <packaging>pom</packaging>
 
     <name>Vaadin Crud Root</name>
