--- a/vaadin-crud-flow-testbench/pom.xml
+++ b/vaadin-crud-flow-testbench/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>vaadin-crud-flow-root</artifactId>
         <groupId>com.vaadin</groupId>
-        <version>3.0-SNAPSHOT</version>
+        <version>mvn install -Pdirectory</version>
     </parent>
 
     <artifactId>vaadin-crud-testbench</artifactId>
