--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.vaadin</groupId>
+        <groupId>com.vaadin.componentfactory</groupId>
         <artifactId>flow-component-base</artifactId>
         <version>3.0-SNAPSHOT</version>
         <relativePath />
     </parent>
 
-    <artifactId>vaadin-enhanced-crud-flow-root</artifactId>
+    <artifactId>enhanced-crud-flow-root</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
-    <name>Vaadin Crud Root</name>
+    <name>Enhanced Crud Root</name>
 
     <inceptionYear>2018</inceptionYear>
 
@@ -42,9 +42,9 @@
     </properties>
 
     <modules>
-        <module>vaadin-crud-flow</module>
-        <module>vaadin-crud-flow-testbench</module>
-        <module>vaadin-crud-flow-demo</module>
+        <module>enhanced-crud-flow</module>
+        <module>enhanced-crud-flow-testbench</module>
+        <module>enhanced-crud-flow-demo</module>
     </modules>
 
     <repositories>
