--- a/vaadin-crud-flow-demo/pom.xml
+++ b/vaadin-crud-flow-demo/pom.xml
@@ -5,15 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.vaadin</groupId>
-        <artifactId>vaadin-enhanced-crud-flow-root</artifactId>
+        <groupId>com.vaadin.componentfactory</groupId>
+        <artifactId>enhanced-crud-flow-root</artifactId>
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>vaadin-enhanced-crud-flow-demo</artifactId>
+    <artifactId>enhanced-crud-flow-demo</artifactId>
     <packaging>${packaging.type}</packaging>
 
-    <name>Vaadin Crud Flow Demo</name>
+    <name>Enhanced Crud Flow Demo</name>
 
     <properties>
         <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-crud-flow</artifactId>
+            <artifactId>enhanced-crud-flow</artifactId>
             <version>${project.version}</version>
         </dependency>
 
