--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,12 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.vaadin.componentfactory</groupId>
-        <artifactId>flow-component-base</artifactId>
-        <version>3.0-SNAPSHOT</version>
-        <relativePath />
-    </parent>
-
+    <groupId>com.vaadin.componentfactory</groupId>
     <artifactId>enhanced-crud-flow-root</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
-    <name>Enhanced Crud Root</name>
+    <name>Enhanced Crud Flow Root</name>
 
     <inceptionYear>2018</inceptionYear>
 
@@ -31,6 +25,8 @@
     </licenses>
 
     <properties>
+    	<vaadin.version>14.1.20</vaadin.version>
+    	<flow.version>2.1.6</flow.version>
         <jetty.plugin.version>9.4.11.v20180605</jetty.plugin.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -67,7 +63,7 @@
                 </property>
             </activation>
             <modules>
-                <module>vaadin-crud-flow-integration-tests</module>
+                <module>enhanced-crud-flow-integration-tests</module>
             </modules>
         </profile>
     </profiles>
