--- a/enhanced-crud-flow/pom.xml
+++ b/enhanced-crud-flow/pom.xml
@@ -3,16 +3,36 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.vaadin.componentfactory</groupId>
-        <artifactId>enhanced-crud-flow-root</artifactId>
-        <version>1.0.0</version>
-    </parent>
-
+    <groupId>com.vaadin.componentfactory</groupId>
     <artifactId>enhanced-crud-flow</artifactId>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <name>Enhanced Crud</name>
+
+    <inceptionYear>2018</inceptionYear>
+
+    <organization>
+        <name>Vaadin Ltd</name>
+        <url>http://vaadin.com/</url>
+    </organization>
+
+    <properties>
+    	<vaadin.version>14.1.20</vaadin.version>
+    	<flow.version>2.1.6</flow.version>
+        <jetty.plugin.version>9.4.11.v20180605</jetty.plugin.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
+    <licenses>
+        <license>
+            <name>CVALv3</name>
+            <url>https://vaadin.com/license/cval-3</url>
+        </license>
+    </licenses>
 
     <dependencyManagement>
         <dependencies>
@@ -55,17 +75,14 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-text-field-flow</artifactId>
-            <version>${textfield.version}</version>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-grid-flow</artifactId>
-            <version>${grid.version}</version>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-button-flow</artifactId>
-            <version>${button.version}</version>
         </dependency>
 
         <!--Test scoped-->
