--- a/enhanced-crud-flow-demo/pom.xml
+++ b/enhanced-crud-flow-demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.vaadin.componentfactory</groupId>
         <artifactId>enhanced-crud-flow-root</artifactId>
-        <version>1.1.7</version>
+        <version>1.1.8</version>
     </parent>
 
     <artifactId>enhanced-crud-flow-demo</artifactId>
@@ -64,11 +64,23 @@
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-notification-flow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
             <artifactId>vaadin-icons-flow</artifactId>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-form-layout-flow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-dialog-flow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-confirm-dialog-flow</artifactId>
         </dependency>
     </dependencies>
 
