--- a/enhanced-crud-flow-demo/pom.xml
+++ b/enhanced-crud-flow-demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.vaadin.componentfactory</groupId>
         <artifactId>enhanced-crud-flow-root</artifactId>
-        <version>1.2.0</version>
+        <version>1.3.0</version>
     </parent>
 
     <artifactId>enhanced-crud-flow-demo</artifactId>
@@ -138,8 +138,7 @@
                         <groupId>org.eclipse.jetty</groupId>
                         <artifactId>jetty-maven-plugin</artifactId>
                         <version>${jetty.plugin.version}</version>
-                        <configuration
-                            combine.self="override">
+                        <configuration combine.self="override">
                             <scanIntervalSeconds>5</scanIntervalSeconds>
                         </configuration>
                     </plugin>
